force-app/main/default/objects/EFPIO__StateData__c/EFPIO__StateData__c.object-meta.xml
<CustomObject>
    <description>Orchestration Event State Data</description>
    <label>Orchestration Event State Data</label>
    <nameField>
        <displayFormat>ESD-{0000}</displayFormat>
        <label>Event State Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Event State Datum</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>