force-app/main/default/objects/EFPIO__StateData__c/fields/EFPIO__IsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__IsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event State Data Encrypted Flag</label>
    <type>Checkbox</type>
</CustomField>