force-app/main/default/objects/EFPIO__StateData__c/fields/EFPIO__Key__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__Key__c</fullName>
    <description>Key of this Event State Data</description>
    <label>State Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>