force-app/main/default/objects/EFPIO__StateData__c/fields/EFPIO__TTL__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__TTL__c</fullName>
    <description>Time to live for this event state data</description>
    <label>Time to Live</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>